--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,8 +21,13 @@
     "@narik/custom-validators": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@popperjs/core": "^2.10.2",
+    "angular2-text-mask": "^9.0.0",
     "bootstrap": "^5.2.0",
+    "ng-brazil": "^2.4.5",
+    "ngx-spinner": "^14.0.0",
+    "ngx-toastr": "^15.2.1",
     "rxjs": "~7.5.0",
+    "text-mask-addons": "^3.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
